Pull request #6 - Loic Shmit (#6)
* Resolved status is now automaticaly set by the algorithm

* update readme

* update config.json

* update agent

Co-authored-by: LoicShmit <root@vps681704.ovh.net>

--- a/config/config.json
+++ b/config/config.json
@@ -15,11 +15,20 @@
     	{
     		"name" : "TeamSpeak",
     		"type" : "ping",
-    		"adress" : "46.105.120.86",
+    		"adress" : "46.105.120.87",
     		"port" : "10011",
     		"interval" : "3",
     		"retries" : 1,
     		"component_id" : "6"
-    	}
+    	},
+	{
+		"name" : "TestMachine",
+		"type" : "ping",
+		"adress" : "54.37.159.236",
+		"port" : "80",
+		"interval" : "3",
+		"retries" : 1,
+		"component_id" : "3"
+	}
     ]
 }
